fix scrollbar during animation

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,18 @@ body {
     background-color: rgb(var(--background-rgb));
 }
 
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: rgba(2, 48, 71, .4);
+    border: 2px solid transparent;
+}
+
 /* Google Styles Overrides */
 .adp .adp-placemark {
     margin: 0;
